--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.6",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/match-sorter-utils": "^8.11.3",
     "@tanstack/react-table": "^8.11.3",
+    "@types/qrcode": "^1.5.5",
     "accept-language": "^3.0.18",
     "clsx": "^2.1.0",
     "country-flag-icons": "^1.5.9",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
-    "framer-motion": "^10.16.4",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
@@ -26,6 +27,7 @@
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
