--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.3.1",
