--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.6",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/match-sorter-utils": "^8.11.3",
