refactor: add dialog for goods in delivery

--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@floating-ui/react": "^0.26.6",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
+    "@mui/material": "^5.15.20",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/match-sorter-utils": "^8.11.3",
@@ -38,6 +41,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.0",
     "react-input-mask": "^2.0.4",
+    "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
     "react-redux": "^8.0.5",
     "react-toastify": "^10.0.4",
@@ -54,6 +58,7 @@
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@types/react-input-mask": "^3.0.5",
+    "@types/react-modal": "^3.16.3",
     "@types/react-redux": "^7.1.27",
     "@types/uuid": "^9.0.6",
     "autoprefixer": "^10.4.16",
