--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.0",
     "react-input-mask": "^2.0.4",
@@ -57,6 +58,7 @@
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
+    "@types/react-gtm-module": "^2.0.3",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-modal": "^3.16.3",
     "@types/react-redux": "^7.1.27",
