--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.0",
+    "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
@@ -59,6 +60,7 @@
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@types/react-gtm-module": "^2.0.3",
+    "@types/react-icons": "^3.0.0",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-modal": "^3.16.3",
     "@types/react-redux": "^7.1.27",
