feat: october support

--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
     "react-modal": "^3.16.1",
     "react-number-format": "^5.3.1",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.0",
     "sharp": "^0.33.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "typescript": "5.2.2",
     "use-immer": "^0.9.0",
     "uuid": "^9.0.1"
@@ -64,6 +67,7 @@
     "@types/react-input-mask": "^3.0.5",
     "@types/react-modal": "^3.16.3",
     "@types/react-redux": "^7.1.27",
+    "@types/react-slick": "^0.23.13",
     "@types/uuid": "^9.0.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
